--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dprint/formatter": "^0.2.0",
     "@quarkunlimit/qu-mobx": "^1.0.0",
+    "@types/opencc-js": "^1.0.0",
     "@vitejs/plugin-legacy": "^4.0.4",
+    "lz-string": "^1.5.0",
+    "opencc-js": "^1.0.5",
     "primereact": "^9.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/lz-string": "^1.5.0",
     "@types/node": "^20.2.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
