--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "uex-panel",
+  "name": "qyi",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config  ./config/webpack.prod",
+    "watch": "webpack --watch",
+    "dev": "webpack serve --open --config ./config/webpack.config",
+    "stats": "webpack --config webpack.config --profile --json > stats.json"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@types/opencc-js": "^1.0.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.1",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.83.1",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0",
+    "@types/lz-string": "^1.5.0"
   },
   "dependencies": {
     "@dprint/formatter": "^0.2.0",
     "@quarkunlimit/qu-mobx": "^1.0.0",
-    "@types/opencc-js": "^1.0.0",
-    "@vitejs/plugin-legacy": "^4.0.4",
-    "lz-string": "^1.5.0",
     "opencc-js": "^1.0.5",
     "primereact": "^9.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/lz-string": "^1.5.0",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "sass": "^1.62.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "react-dom": "^18.2.0",
+    "workerize-loader": "^2.0.2",
+    "lz-string": "^1.5.0"
   }
 }
