--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true,
+    "sourceMap": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "style/*": ["src/style/*"],
-      "utils/*": ["src/utils/*"],
+      "Layout": ["src/Layout/index.tsx"],
+      "Router": ["src/Router/index.ts"],
       "pages/*": ["src/pages/*"],
-      "qbb/*": ["src/qbb/*"],
-      "database/*": ["src/database/*"],
-      "components/*": ["src/components/*"]
+      "utils/*": ["src/utils/*"]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["./**/*.ts", "./**/*.tsx"],
+  "exclude": ["node_modules/**/*"]
 }
