--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "typescript": "^5.0.4",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0",
-    "@types/lz-string": "^1.5.0"
+    "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
     "@dprint/formatter": "^0.2.0",
@@ -40,7 +39,6 @@
     "primereact": "^9.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "workerize-loader": "^2.0.2",
-    "lz-string": "^1.5.0"
+    "workerize-loader": "^2.0.2"
   }
 }
