--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "esnext",
+    "downlevelIteration": true,
     "moduleResolution": "node",
-    "target": "es5",
+    "target": "ESNext",
     "jsx": "react",
     "allowJs": true,
     "sourceMap": true,
